Repair slider on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,4 +67,18 @@ body{
 #cursor{
   display: none;
 }
+.whatwedo{
+  top: 0;
+}
+.contact{
+  top: -40.5vh;
+}
+
+.offer{
+  top: -81vh;
+}
+
+.about{
+  top: -122vh;
+}
 }
